--- a/style.css
+++ b/style.css
@@ -12,3 +12,14 @@
     justify-content: space-between;
 }
 
+.site-brand{
+    color: #fff;
+    font-size: 2.4rem;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    opacity: 0.95;
+}
+
+.site-brand span{
+    font-weight: 300;
+}
