--- a/utility.css
+++ b/utility.css
@@ -25,11 +25,13 @@ button, input[type= "submit"] {
 }
 
 .flex{
+    
     display: flex;
     align-items: center;
-    justify-content: center;
-
+    justify-content: space-between;
 }
+
+
 
 .text{
     font-weight: 400;
