--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: transparent;
+    background-color: gold;
     padding: 1rem 0;
     z-index: 999;
 }
@@ -11,7 +11,7 @@
 }
 
 .site-brand{
-    color: #fff;
+    color:red;
     font-size: 2.4rem;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
