--- a/style.css
+++ b/style.css
@@ -96,6 +96,8 @@
 header{
     min-height: 100vh;
     padding-top: 5rem;
-    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../media/fans.jpeg);
-
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(/media/fans.jpeg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
 }
