--- a/style.css
+++ b/style.css
@@ -93,8 +93,8 @@
     opacity: 0.8;
 }
 
-.header{
+header{
     min-height: 100vh;
     padding-top: 5rem;
-    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(/media/fans.jpeg);
+    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(/media/fans.jpeg);
 }
