--- a/style.css
+++ b/style.css
@@ -96,5 +96,5 @@
 header{
     min-height: 100vh;
     padding-top: 5rem;
-    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(/media/fans.jpeg);
+    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../media/fans.jpeg);
 }
