--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root{
     --trans: all 0.3s ease-in-out;
+    --dark: #0e1010;
 }
 
 
@@ -8,7 +9,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: gold;
+    background-color:red;
     padding: 1rem 0;
     z-index: 999;
 }
@@ -17,7 +18,7 @@
 }
 
 .site-brand{
-    color:red;
+    color:gold;
     font-size: 2.4rem;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
@@ -96,5 +97,45 @@
 header{
     min-height: 100vh;
     padding-top: 5rem;
-    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../media/fans.jpeg);
+    background: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0,0,0,0.4)), url(./media/fans3.jpeg) center/cover
+    no-repeat;
+    flex-direction: column;
+    color: white;
+    text-align: center;
+}
+
+.header-title h1{
+    font-size: 2.8rem;
+    letter-spacing: 2px;
+}
+
+.header-title p{
+    margin: 1.8rem auto;
+    max-width: 700px;
+    font-weight: 500;
+    font-size: 1.1rem;
+    line-height: 1.8;
+}
+
+.header-form{
+    background: rgba(0,0,0, 0.5);
+    padding: 2rem;
+    border-radius: 0.2rem;
+}
+.header-form h3{
+    font-size: 1.2rem;
+}
+.header-form form{
+    flex-direction: column;
+    margin-top: 2.8rem;
+}
+
+.header-form form .form-control{
+    box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.4);
+}
+.header-form input[type = "date"]{
+    text-transform: uppercase;
+}
+.header-form input:not([type = submit])::placeholder{
+    color: white;
 }
