--- a/utility.css
+++ b/utility.css
@@ -70,7 +70,7 @@ button, input[type= "submit"] {
 }
 /* endre bakgrunn på scroll m js */
 .navbar-cng{
-background-color: red;
+background-color:white;
 box-shadow: 0px 4px 5px 0px rgba(49,49, 49, 0.2);
 transition: var(--trans);
 }
