--- a/responsive.css
+++ b/responsive.css
@@ -19,6 +19,11 @@
     display: none;
 }
 
+.header-form .form-control, .header-form .btn{
+    margin: 0 0.5rem;
+}
+
+
 #navbar-collapse{
     display: block!important;
     background-color: transparent;
