--- a/utility.css
+++ b/utility.css
@@ -62,6 +62,11 @@ button, input[type= "submit"] {
     opacity: 0.9;
     transition: var(--trans);
 }
+
+.resize-animation-stopper *{
+    animation: none!important;
+    transition: none!important;
+}
 ::-webkit-calendar-picker-indicator{
     filter:invert(1);
 }
@@ -108,3 +113,4 @@ transition: var(--trans);
     margin-left: auto;
     line-height: 1.7;
 }
+
