--- a/responsive.css
+++ b/responsive.css
@@ -1,7 +1,18 @@
+@media screen and (max-width: 460px){
+    .latest-item-content{
+        transform: translateY(68%);
+    }
+}
+
 @media screen and (min-width: 768px){
     .header-title p{
         font-size: 1.4rem;
     }
+    .latest-container{
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
 }
 @media screen and (min-width: 992px){
     .header-title h1{
