--- a/utility.css
+++ b/utility.css
@@ -28,7 +28,7 @@ button, input[type= "submit"] {
     
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .text{
@@ -46,7 +46,7 @@ button, input[type= "submit"] {
     border-radius: 0.2rem;
     padding: 0.7rem;
     font-size: 1rem;
-    color: white;
+    color: black;
     background-color: transparent;
 }
 
@@ -54,9 +54,9 @@ button, input[type= "submit"] {
     padding: 0.7rem 2.4rem;
     border-radius: 0.2rem;
     font-weight: 600;
-    background-color: gold;
+    background-color:rgb(204, 157, 0) ;
     color:black;
-    border: 1px solid gold;
+    border: 1px solid rgb(204, 157, 0);
 }
 .btn:hover{
     opacity: 0.9;
